<resources>
    <string name="app_name">Lesson 4.13</string>
    <string name="title_activity">Nations And Population</string>
    <string name="text_china">China</string>
    <string name="text_beijing">Beijing</string>
    <string name="text_country_flag">Country\'s flag</string>
    <string name="text_nation">Nation: </string>
    <string name="text_capital">Capital: </string>
    <string name="text_population">Population: </string>
    <string name="text_area">Area: </string>
    <string name="text_density">Density: </string>
    <string name="text_world_share">World Share: </string>
    <string name="text_km2">Km\u00B2</string>
    <string name="text_million">million people</string>
    <string name="text_ppa">people/Km\u00B2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Image back</string>
</resources>